# Physical-AI-Humanoid-Robotics-

./: .gitattributes  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  activate.bat  api_inference.py  app.py  huggingface_app.py  init_db.py  requirements.txt  space.py  start_backend.py  start_server.py
backend/app/: config.py  db.py  ingest_docs.py  main.py
backend/app/api/: auth_endpoint.py  health_endpoint.py  personalization_endpoint.py  query_endpoint.py  selected_text_endpoint.py
backend/app/core/: query_processor.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: api_responses.py  citation.py  db_models.py  query.py  response.py  session.py  user.py
backend/app/services/: generation_service.py  retrieval_service.py  session_service.py  validation_service.py
backend/app/utils/: citation_utils.py
backend/test_data/: sample.txt
backend/tests/: test_basic.py
digital-twin-site/: docusaurus.config.ts
docs/: assessments-hardware.mdx  intro.md
docs/book/: _category_.json
docs/book/module-1-ros2/: _category_.json  nervous-system.md
docs/book/module-2-digital-twin/: _category_.json  digital-twin.md
docs/chapter-01-introduction/: _category_.json  intro.mdx
docs/chapter-06-capstone-infra/: _category_.json
docs/chapter-06-capstone-infra/capstone-project/: _category_.json  capstone-project.mdx
docs/chapter-06-capstone-infra/cloud-lab/: _category_.json  cloud-lab.mdx
docs/chapter-06-capstone-infra/hardware-requirements/: _category_.json  hardware-requirements.mdx
docs/module-1-ros2/: _category_.json  week-05-ros2-advanced-concepts.mdx  week-06-urdf-robot-description.mdx
docs/module-1-ros2/week-03-ros2-introduction/: _category_.json
docs/module-1-ros2/week-04-ros2-core-concepts/: _category_.json  ros2-core-concepts.mdx
docs/module-1-ros2/week-05-ros2-packages-launch/: _category_.json  ros2-packages-launch.mdx
docs/module-2-digital-twin/: _category_.json  week-07-gazebo-simulation.mdx  week-08-sensor-simulation.mdx
docs/module-2-digital-twin/week-06-gazebo-setup/: _category_.json  gazebo-setup.mdx
docs/module-2-digital-twin/week-07-gazebo-sensors-unity/: _category_.json  gazebo-sensors-unity.mdx
docs/module-3-ai-robot-brain/: _category_.json  week-09-isaac-sim-sdk.mdx  week-10-ai-perception-manipulation.mdx  week-11-kinematics-dynamics.mdx
docs/module-3-ai-robot-brain/week-08-isaac-sdk-sim/: _category_.json  architecture-diagrams.md  gpu-components.md  hardware-acceleration.md  intro.md  isaac-ecosystem.md  isaac-sim-architecture.md  isaac-sim-workflows.md  photorealistic-sim.md
docs/module-3-ai-robot-brain/week-09-isaac-perception-rl/: _category_.json  domain-randomization.md  gpu-perception-pipelines.md  isaac-ros-acceleration.md  multi-modal-sensing.md  perception-pipeline.md  synthetic-data.md  vslam-concepts.md
docs/module-3-ai-robot-brain/week-10-sim-to-real/: _category_.json  citations.md  comprehensive-review.md  domain-gap.md  end-to-end-pipeline.md  humanoid-nav-challenges.md  implementation-summary.md  integration-review.md  isaac-sim-to-real.md  jetson-deployment.md  localization-mapping.md  nav-overview.md  nav2-architecture.md  nav2-bipedal.md  practical-examples.md  practical-transfer.md  quality-assurance.md  sim-to-real-concepts.md  theoretical-practical-transfer.md  traditional-vs-humanoid-nav.md
docs/module-4-vla/: _category_.json  week-01-physical-ai-foundations.mdx  week-02-embodied-intelligence.mdx  week-04-ros2-nodes-topics.mdx  week-12-conversational-ai.mdx
docs/module-4-vla/week-01-physical-ai-foundations/: _category_.json  physical-ai-foundations.mdx
ros2_ws/src/robot_nervous_system/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_nervous_system/action/: MoveRobot.action
ros2_ws/src/robot_nervous_system/ai_bridges/: python_agent_bridge.py
ros2_ws/src/robot_nervous_system/launch/: nervous_system.launch.py
ros2_ws/src/robot_nervous_system/msg/: JointCommandMessage.msg  JointStateMessage.msg  RobotConfigurationMessage.msg  SensorDataMessage.msg
ros2_ws/src/robot_nervous_system/observability/: logging_module.py  metrics_collector.py  tracing_system.py
ros2_ws/src/robot_nervous_system/ros2_nodes/: action_node.cpp  publisher_node.py  service_node.cpp  subscriber_node.py
ros2_ws/src/robot_nervous_system/security/: security_context.py
ros2_ws/src/robot_nervous_system/srv/: ExecuteAction.srv  LoadURDF.srv
ros2_ws/src/robot_nervous_system/urdf_models/: humanoid_24dof.urdf
simulation/gazebo_env/docs/: implementation_notes.md  (+2 more)
simulation/ros_integration/: CMakeLists.txt  package.xml
simulation/ros_integration/src/digital_twin/: CMakeLists.txt  README.md  digital_twin_sync.py  package.xml  sensor_processor.py
simulation/ros_integration/src/digital_twin/bridge/node/: digital_twin_bridge.py
simulation/ros_integration/src/digital_twin/config/: controllers.yaml  digital_twin_config.yaml
simulation/ros_integration/src/digital_twin/docs/: quickstart.md
simulation/ros_integration/src/digital_twin/launch/: digital_twin.launch.py  digital_twin_system.launch.py
simulation/ros_integration/src/digital_twin/scripts/: digital_twin_sync.py
simulation/ros_integration/src/digital_twin/urdf/: system_integration.urdf.xacro
specs/003-rag-chatbot-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-nvidia-isaac-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-vision-language-action/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ros2-nervous-system/: README.md  SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-digital-twin/: README.md  SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: auth-client.ts  auth.ts
src/contexts/: AuthContext.tsx
src/pages/: index.tsx
src/utils/: api-mock.ts
(+68 files in other folders)
